[package]
name = "ether-dream-dac-emulator"
version = "0.2.1"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "A crate for building and running custom Ether Dream DAC emulators."
readme = "README.md"
keywords = ["laser", "emulator", "protocol", "etherdream", "dac"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nannou-org/ether-dream.git"
homepage = "https://github.com/nannou-org/ether-dream"
edition = "2018"

[dependencies]
ether-dream = { version = "0.2", path = "../ether-dream" }
futures = "0.3"
piper = { git = "https://github.com/stjepang/piper", branch = "master" }
smol = { path = "../../smol" }

[dev-dependencies]
nannou = "0.14"
smol = { path = "../../smol", features = ["tokio02"] }
tokio = { version = "0.2", features = ["full"] }
async-std = "1"
