[package]
name = "ether-dream-dac-emulator"
version = "0.3.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
description = "A crate for building and running custom Ether Dream DAC emulators."
readme = "README.md"
keywords = ["laser", "emulator", "protocol", "etherdream", "dac"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/nannou-org/ether-dream.git"
homepage = "https://github.com/nannou-org/ether-dream"
edition = "2018"

[dependencies]
ether-dream = { version = "0.2", path = "../ether-dream" }
futures = "0.3"
piper = "0.1"
smol = "0.1"

[dev-dependencies]
nannou = "0.14"
